add submit application id function and begin docs
